[tool.poetry]
name = "ocra-relax2"
version = "2.0.0"
description = "Educational GUI for the OCRA based tabletop MRI"
authors = ["Marcus Prier <marcus-prier@gmx.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "<3.12,>=3.8"
pyqt5 = "^5.15"
matplotlib = "^3.7.1"
pandas = "^1.5.3"
scipy = "^1.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
